# aoc2024

./: .gitignore  CMakeLists.txt  Dockerfile  main.c
src/day1/: day1_1.c  day1_1.h  day1_2.c  day1_2.h
src/day2/: day2.c  day2.h
src/day3/: day3.c  day3.h
src/day4/: day4.c  day4.h
src/day5/: day5.c  day5.h
src/day6/: day6.c  day6.h
src/day7/: day7.c  day7.h
src/day8/: day8.c  day8.h
src/libs/: liblists.c  liblists.h  libreports.c  libreports.h  libstringutils.c  libstringutils.h
